# cheogram

./: .gitignore  Adhoc.hs  COPYING  CommandAction.hs  Config.hs  ConfigureDirectMessageRoute.hs  DB.hs  IQManager.hs  IqHandler.hs  JidSwitch.hs  Main.hs  Makefile  README  RedisURL.hs  Shorten.hs  StanzaRec.hs  UniquePrefix.hs  Util.hs  VCard4.hs  cheogram.cabal  guix.scm  manifest.scm
.builds/: debian-stable.yml  guix.yml  ubuntu-lts.yml
