name:            cheogram
version:         0.0.1
cabal-version:   >= 1.14
license:         OtherLicense
license-file:    COPYING
category:        Network
copyright:       © Stephen Paul Weber
author:          Stephen Paul Weber <singpolyma@singpolyma.net>
maintainer:      Stephen Paul Weber <singpolyma@singpolyma.net>
stability:       experimental
tested-with:     GHC == 7.6.3
synopsis:        Groupchat for everyone!
homepage:        https://git.singpolyma.net/cheogram
bug-reports:     mailto:dev@singpolyma.net
build-type:      Simple
description:
        Bridge between XMPP MUC and SMS.

extra-source-files:
        README

executable cheogram
        main-is: Main.hs
        other-modules: ConfigureDirectMessageRoute, Util
        default-language: Haskell2010
        ghc-options:      -Wno-tabs -Wno-orphans

        build-depends:
                base == 4.*,
                basic-prelude,
                attoparsec,
                base58-bytestring,
                base64-bytestring,
                bytestring >= 0.10.0.0,
                case-insensitive,
                containers,
                cryptonite,
                errors,
                monad-loops,
                monads-tf,
                network,
                network-uri,
                network-protocol-xmpp == 0.4.8,
                random,
                random-shuffle,
                SHA,
                stm >= 2.4,
                text,
                time,
                tokyocabinet-haskell,
                uuid,
                xml-types

source-repository head
        type:     git
        location: https://git.singpolyma.net/cheogram